best-practices-gpol/add-rolebinding/.chainsaw-test/chainsaw-step-03-apply-1.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: ns-creator
rules:
- apiGroups:
  - ""
  resources:
  - namespaces
  verbs:
  - create
