best-practices-gpol/add-rolebinding/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-addrb-ns
